upgraded midje dependency; adjuted lein ring setup